Fix: Links could be virtually invisible against a selected row's tint
https://datatables.net/forums/discussion/72942

--- a/css/common.scss
+++ b/css/common.scss
@@ -37,6 +37,7 @@ $table-body-border: 1px solid shade($table-row-background, 15%) !default;
 // Row colour, when selected (tr.selected) and used for processing display
 $table-row-selected: rgba(13, 110, 253, 0.9) !default;
 $table-row-selected-text: white !default;
+$table-row-selected-link: #090a0b !default;
 
 // Text colour of the interaction control elements (info, filter, paging etc)
 $table-control-color: #333 !default;
@@ -94,6 +95,10 @@ $close-button-background: #d33333 !default;
 		&.selected > * {
 			box-shadow: inset 0 0 0 9999px $table-row-selected;
 			color: $table-row-selected-text;
+		}
+
+		&.selected a {
+			color: $table-row-selected-link;
 		}
 	}
 
